--- a/ScorchedServer/ScorchedServer/homepage.css
+++ b/ScorchedServer/ScorchedServer/homepage.css
@@ -14,7 +14,7 @@ h1 {
 }
 
 a {
-	color: #000;
+	color: darkblue;
 }
 
 .screenshot {
@@ -31,7 +31,7 @@ a {
 
 .description {
 	color: #fff;
-	padding: 10px;
+	padding: 10px 20px;
 	margin-left: 420px;
 	background-color: #3F9F9F;
 	-moz-border-radius: 16px;
