added a text input to enter player name, which is then sent to the server and stored in localStorage

--- a/src/ScorchedServer/play/style.css
+++ b/src/ScorchedServer/play/style.css
@@ -1,7 +1,7 @@
 body
 {
 	margin: 0 auto;
-	overflow: hidden;
+	xoverflow: hidden;
 	width: 100%;
 	text-align: center;
   /* background-color: rgb(200,255,200); */
